--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
     branches: [ main ]
   workflow_dispatch: # Allows you to run this workflow manually from the Actions tab
   schedule:
-    - cron: 0 23 * * *
+    - cron: 0 0 */7 * *  # run every 7 days
 jobs:
   build:
     runs-on: ubuntu-latest
