--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -25,25 +25,23 @@ jobs:
         with:
           platforms: linux/${{ matrix.container-image-arch }}
 
-      - name: Build container image
-        uses: redhat-actions/buildah-build@v2
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
         with:
-          image: ${{ env.IMAGE_NAME }}
-          tags: ${{ env.TAG }}
-          archs: ${{ matrix.container-image-arch }}
-          containerfiles: |
-            ./Containerfile
-          oci: true
-
-      - name: Push To docker hub
-        if: github.ref_name == 'main' # only push the image if the branch is main
-        uses: redhat-actions/push-to-registry@v2
-        with:
-          image: ${{ env.IMAGE_NAME }}
-          tags: ${{ env.TAG }}
-          registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build container image
+        uses: docker/build-push-action@v3
+        with:
+          file: Containerfile
+          tags: ${{ env.IMAGE_NAME }}:${{ env.TAG }}
+          platforms: linux/${{ matrix.container-image-arch }}
+          outputs: type=oci,dest=image.tar
+          push: true
 
       - name: Update docker hub description
         if: github.ref_name == 'main' # only update description if the branch is main
