feat: build oci image

--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -40,7 +40,7 @@ jobs:
           file: Containerfile
           tags: ${{ env.IMAGE_NAME }}:${{ env.TAG }}
           platforms: linux/${{ matrix.container-image-arch }}
-          outputs: type=oci,dest=image.tar
+          outputs: type=oci
           push: true
 
       - name: Update docker hub description
