--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -12,10 +12,6 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        container-image-arch: [ amd64, arm64, arm ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -23,7 +19,7 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
         with:
-          platforms: linux/${{ matrix.container-image-arch }}
+          platforms: amd64,arm64,arm
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
@@ -39,7 +35,7 @@ jobs:
         with:
           file: Containerfile
           tags: ${{ env.IMAGE_NAME }}:${{ env.TAG }}
-          platforms: linux/${{ matrix.container-image-arch }}
+          platforms: linux/amd64,linux/arm64,linux/arm
           push: true
 
       - name: Update docker hub description
