--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -6,7 +6,7 @@ on:
     - cron: 0 0 */7 * *  # run once a week
 
 env:
-  IMAGE_NAME: rouhim/althttpd
+  IMAGE_NAME: docker.io/rouhim/althttpd
   TAG: latest
 
 jobs:
@@ -39,20 +39,73 @@ jobs:
         uses: redhat-actions/buildah-build@v2
         with:
           image: ${{ env.IMAGE_NAME }}
-          tags: ${{ env.TAG }}
+          tags: ${{ env.TAG }}_${{ matrix.container-image-arch }}
           archs: ${{ matrix.container-image-arch }}
           containerfiles: |
             ./Containerfile      
 
-      - name: Echo Outputs
-        run: |
-          echo "Image: ${{ steps.build_image.outputs.image }}"
-          echo "Tags: ${{ steps.build_image.outputs.tags }}"
-          echo "Tagged Image: ${{ steps.build_image.outputs.image-with-tag }}"    
+      - name: Save container image
+        run: podman save -o ${{ matrix.container-image-arch }}.tar ${{ env.IMAGE_NAME }}:${{ env.TAG }}_${{ matrix.container-image-arch }}
 
-#  publish:
-#    runs-on: ubuntu-latest
-#    steps:
+      - name: Upload container image
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ matrix.container-image-arch }}
+          path: ${{ matrix.container-image-arch }}.tar
+
+  publish:
+    runs-on: ubuntu-latest
+    steps:
+
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Download Container Image
+        uses: actions/download-artifact@v3
+        with:
+          name: amd64
+          path: .
+
+
+      - name: Download Container Image
+        uses: actions/download-artifact@v3
+        with:
+          name: arm64
+          path: .
+
+
+      - name: Download Container Image
+        uses: actions/download-artifact@v3
+        with:
+          name: arm
+          path: .
+
+      - name: Restore container image
+        run: podman load --input amd64.tar
+
+      - name: Restore container image
+        run: podman load --input arm64.tar
+
+      - name: Restore container image
+        run: podman load --input arm.tar
+
+
+      - name: Create container image manifast
+        run: buildah manifest create ${{ env.IMAGE_NAME }}:${{ env.TAG }}
+
+      - name: Add amd64
+        run: buildah manifest add --arch amd64 ${{ env.IMAGE_NAME }}:${{ env.TAG }} docker://${{ env.IMAGE_NAME }}:${{ env.TAG }}_amd64
+
+      - name: Add arm64
+        run: buildah manifest add --arch arm64 ${{ env.IMAGE_NAME }}:${{ env.TAG }} docker://${{ env.IMAGE_NAME }}:${{ env.TAG }}_arm64
+
+      - name: Add arm
+        run: buildah manifest add --arch arm ${{ env.IMAGE_NAME }}:${{ env.TAG }} docker://${{ env.IMAGE_NAME }}:${{ env.TAG }}_arm
+
+      - name: Push to docker hub
+        run: buildah manifest push --all ${{ env.IMAGE_NAME }}:${{ env.TAG }}
+
+
 #      - name: Update docker hub description
 #        if: github.ref_name == 'main' # only update description if the branch is main
 #        uses: peter-evans/dockerhub-description@v3
