--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -25,12 +25,6 @@ jobs:
         with:
           platforms: ${{ matrix.container-image-arch }}
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -57,6 +51,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Checkout code
         uses: actions/checkout@v3
@@ -95,16 +95,16 @@ jobs:
         run: buildah manifest create ${{ env.IMAGE_NAME }}:${{ env.TAG }}
 
       - name: Add amd64
-        run: buildah manifest add --arch amd64 ${{ env.IMAGE_NAME }}:${{ env.TAG }} docker://${{ env.IMAGE_NAME }}:${{ env.TAG }}_amd64
+        run: buildah manifest add ${{ env.IMAGE_NAME }}:${{ env.TAG }} docker://${{ env.IMAGE_NAME }}:${{ env.TAG }}_amd64
 
       - name: Add arm64
-        run: buildah manifest add --arch arm64 ${{ env.IMAGE_NAME }}:${{ env.TAG }} docker://${{ env.IMAGE_NAME }}:${{ env.TAG }}_arm64
+        run: buildah manifest add ${{ env.IMAGE_NAME }}:${{ env.TAG }} docker://${{ env.IMAGE_NAME }}:${{ env.TAG }}_arm64
 
       - name: Add arm
-        run: buildah manifest add --arch arm ${{ env.IMAGE_NAME }}:${{ env.TAG }} docker://${{ env.IMAGE_NAME }}:${{ env.TAG }}_arm
+        run: buildah manifest add ${{ env.IMAGE_NAME }}:${{ env.TAG }} docker://${{ env.IMAGE_NAME }}:${{ env.TAG }}_arm
 
       - name: Push to docker hub
-        run: buildah manifest push --all ${{ env.IMAGE_NAME }}:${{ env.TAG }}
+        run: buildah manifest push --creds ${{ secrets.DOCKERHUB_USERNAME }}:${{ secrets.DOCKERHUB_PASSWORD }} --all ${{ env.IMAGE_NAME }}:${{ env.TAG }}
 
 
 #      - name: Update docker hub description
