--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -25,9 +25,6 @@ jobs:
         with:
           platforms: ${{ matrix.container-image-arch }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
       - name: Build container image
         id: build_image
         uses: redhat-actions/buildah-build@v2
@@ -52,70 +49,50 @@ jobs:
     needs: build
     steps:
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Download Container Image
+      - name: Download amd64 Container Image
         uses: actions/download-artifact@v3
         with:
           name: amd64
           path: .
-
-
-      - name: Download Container Image
+      - name: Download arm64 Container Image
         uses: actions/download-artifact@v3
         with:
           name: arm64
           path: .
-
-
-      - name: Download Container Image
+      - name: Download arm Container Image
         uses: actions/download-artifact@v3
         with:
           name: arm
           path: .
 
-      - name: Restore container image
-        run: podman load --input amd64.tar
+      - name: Restore container images
+        run: | 
+          podman load --input amd64.tar
+          podman load --input arm64.tar
+          podman load --input arm.tar
 
-      - name: Restore container image
-        run: podman load --input arm64.tar
-
-      - name: Restore container image
-        run: podman load --input arm.tar
-
-      - name: List container images
-        run: podman images
-
-      - name: Create container image manifast
+      - name: Create container image manifest
         run: buildah manifest create multiarch-manifest
 
-      - name: Add amd64
-        run: buildah manifest add multiarch-manifest ${{ env.IMAGE_NAME }}:${{ env.TAG }}_amd64
-
-      - name: Add arm64
-        run: buildah manifest add multiarch-manifest ${{ env.IMAGE_NAME }}:${{ env.TAG }}_arm64
-
-      - name: Add arm
-        run: buildah manifest add multiarch-manifest ${{ env.IMAGE_NAME }}:${{ env.TAG }}_arm
+      - name: Add all architechtures to the manifest
+        run: | 
+          buildah manifest add multiarch-manifest ${{ env.IMAGE_NAME }}:${{ env.TAG }}_amd64
+          buildah manifest add multiarch-manifest ${{ env.IMAGE_NAME }}:${{ env.TAG }}_arm64
+          buildah manifest add multiarch-manifest ${{ env.IMAGE_NAME }}:${{ env.TAG }}_arm
 
       - name: Login to docker hub
         run: podman login docker.io --username ${{ secrets.DOCKERHUB_USERNAME }} --password ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Push to docker hub
+      - name: Push multiarch manifest to docker hub
         run: buildah manifest push --all multiarch-manifest docker://docker.io/${{ env.IMAGE_NAME }}:${{ env.TAG }}
 
-
-#      - name: Update docker hub description
-#        if: github.ref_name == 'main' # only update description if the branch is main
-#        uses: peter-evans/dockerhub-description@v3
-#        with:
-#          username: ${{ secrets.DOCKERHUB_USERNAME }}
-#          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-#          repository: rouhim/althttpd
+      - name: Update docker hub description
+        if: github.ref_name == 'main' # only update description if the branch is main
+        uses: peter-evans/dockerhub-description@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          repository: rouhim/althttpd
