--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   IMAGE_NAME: rouhim/althttpd
-  TAG: latest
+  IMAGE_TAG: latest
 
 jobs:
   build:
@@ -30,13 +30,13 @@ jobs:
         uses: redhat-actions/buildah-build@v2
         with:
           image: ${{ env.IMAGE_NAME }}
-          tags: ${{ env.TAG }}_${{ matrix.container-image-arch }}
+          tags: ${{ env.IMAGE_TAG }}_${{ matrix.container-image-arch }}
           archs: ${{ matrix.container-image-arch }}
           containerfiles: |
             ./Containerfile
 
       - name: Save container image
-        run: podman save -o ${{ matrix.container-image-arch }}.tar ${{ env.IMAGE_NAME }}:${{ env.TAG }}_${{ matrix.container-image-arch }}
+        run: podman save -o ${{ matrix.container-image-arch }}.tar ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}_${{ matrix.container-image-arch }}
 
       - name: Upload container image
         uses: actions/upload-artifact@v3
@@ -79,15 +79,15 @@ jobs:
 
       - name: Add all architechtures to the manifest
         run: | 
-          buildah manifest add multiarch-manifest ${{ env.IMAGE_NAME }}:${{ env.TAG }}_amd64
-          buildah manifest add multiarch-manifest ${{ env.IMAGE_NAME }}:${{ env.TAG }}_arm64
-          buildah manifest add multiarch-manifest ${{ env.IMAGE_NAME }}:${{ env.TAG }}_arm
+          buildah manifest add multiarch-manifest ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}_amd64
+          buildah manifest add multiarch-manifest ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}_arm64
+          buildah manifest add multiarch-manifest ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}_arm
 
       - name: Login to docker hub
         run: podman login docker.io --username ${{ secrets.DOCKERHUB_USERNAME }} --password ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Push multiarch manifest to docker hub
-        run: buildah manifest push --all multiarch-manifest docker://docker.io/${{ env.IMAGE_NAME }}:${{ env.TAG }}
+        run: buildah manifest push --all multiarch-manifest docker://docker.io/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
 
       - name: Update docker hub description
         if: github.ref_name == 'main' # only update description if the branch is main
